--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -10,12 +10,19 @@ target 'TusNativeExample' do
 
   pod 'react-native-tus-native', :path => '../..'
 
+  post_install do |installer|
+    # react_native_post_install(installer)
+    installer.pods_project.build_configurations.each do |config|
+      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+    end
+  end
+
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!({ 'Flipper' => '0.80.0' })
-  post_install do |installer|
-    flipper_post_install(installer)
-  end
+  # use_flipper!({ 'Flipper' => '0.80.0' })
+  # post_install do |installer|
+  #   flipper_post_install(installer)
+  # end
 end
