--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "arch -x86_64 npx react-native run-ios --simulator \"iPhone 13 Pro\"",
     "start": "react-native start"
   },
   "dependencies": {
