chore:add local instance of TUSKit into podfile for testing and development

--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -8,6 +8,7 @@ target 'TusNativeExample' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'TUSKit', :path => '../../../TUSKit'
   pod 'react-native-tus-native', :path => '../..'
 
   # Enables Flipper.
