chore:migrate to react-native-tus naming from react-native-tus-native

--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -9,7 +9,7 @@ target 'TusNativeExample' do
   use_react_native!(:path => config["reactNativePath"])
 
   pod 'TUSKit', :path => '../../../TUSKit'
-  pod 'react-native-tus-native', :path => '../..'
+  pod 'react-native-tus', :path => '../..'
 
   # Enables Flipper.
   #
