--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-tus-native-example",
-  "description": "Example app for react-native-tus-native",
+  "name": "react-native-tus-example",
+  "description": "Example app for react-native-tus",
   "version": "0.0.1",
   "private": true,
   "scripts": {
