--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,10 +54,10 @@ jobs:
         registry-url: https://npm.pkg.github.com/
         scope: "@Cantabar"
     - name: List available files
-      run: ls -la
+      run: ls *.tgz
     - name: Install Yarn
       run: npm install -g yarn
     - run: echo "registry=https://npm.pkg.github.com/@Cantabar" >> .npmrc
-    - run: yarn publish $(ls *.tgz)
+    - run: yarn publish "$(ls *.tgz)"
       env:
         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
