add photo library permission to example app

--- a/example/ios/example/Info.plist
+++ b/example/ios/example/Info.plist
@@ -51,5 +51,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Example app needs permission to access Photo Library</string>
 </dict>
 </plist>
