Updates to example project to include document picker as an option to select files for upload

--- a/example/ios/example/Info.plist
+++ b/example/ios/example/Info.plist
@@ -45,6 +45,7 @@
 	<string>Example app needs permission to access Photo Library</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>processing</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
