--- a/example/package.json
+++ b/example/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "async-batch": "^1.1.2",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-document-picker": "^8.1.0",
+    "react-native-fs": "^2.19.0",
     "react-native-image-picker": "^4.7.3",
     "react-native-paper": "^4.12.0",
     "react-native-vector-icons": "^9.1.0"
