--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Test, Build, and Deploy
 
 on:
   push:
@@ -7,22 +7,35 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-18.04
+    if: "!startsWith(github.event.head_commit.message, '[RELEASE]')"
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js 16.x
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16.x
-    - name: Install Yarn
-      run: npm install -g yarn
-    - run: yarn install --frozen-lockfile
-    - run: yarn lint
-    - run: yarn test
+      - uses: actions/checkout@v2
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+      - name: Install Yarn
+        run: npm install -g yarn
+      - run: yarn install --frozen-lockfile
+      - run: yarn lint
+      - run: yarn test
+  version:
+    needs: [tests]
+    runs-on: ubuntu-latest
+    if: github.repository_owner == 'zachywheeler' && !startsWith(github.event.head_commit.message, '[RELEASE]')
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+      - run: git config --global user.name 'Auto Increment'
+      - run: git config --global user.email 'auto.increment@example.com'
+      - run: npm version patch -m "[RELEASE] %s"
+      - run: git push
   package:
-    needs: [build]
     runs-on: ubuntu-18.04
+    if: github.repository_owner == 'zachywheeler' && startsWith(github.event.head_commit.message, '[RELEASE]')
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 16.x
